Reapply "Switch menus to popover/anchor positioning"
This reverts commit f41919db6ae062da82c37395a117997413485c2e.

Have made tweaks to dark-mode so it works with popovers.

--- a/src/global.css
+++ b/src/global.css
@@ -37,7 +37,8 @@
   }
 }
 
-body {
+body,
+[popover] {
   background-color: var(--body-background-color);
   font-family: Helvetica, Arial, sans-serif;
   color: var(--body-font-color);
